<resources>
    <string name="app_name">OTT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="info">Info</string>
    <string name="play">Play</string>
    <string name="my_list">My List</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="save_your_data_watch_offline_on_a_plane_train_or_submarine">Save your data, watch offline on a plane, train, or submarine...</string>
    <string name="download_and_go">Download and go</string>
    <string name="enter_your_email">ENTER YOUR EMAIL</string>
    <string name="enter_email_to_invite">ENTER EMAIL TO INVITE</string>
    <string name="verify">Verify</string>
    <string name="check_your_mail">Check Your Mail</string>
</resources>