<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:background="@color/black"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".activity.WelcomeActivity">



    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="500dp">
        <ImageView
            android:src="@drawable/welcome_bg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/download_and_go"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:textColor="@color/white"
            android:layout_margin="20dp"
            android:textSize="13sp"
            android:textAlignment="center"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/save_your_data_watch_offline_on_a_plane_train_or_submarine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <Button

        android:backgroundTint="@color/btn_red"
        android:layout_marginBottom="10dp"
        android:layout_above="@id/already"
        android:id="@+id/signup"
        android:fontFamily="@font/poppins_medium"
        android:text="sign up"
        android:layout_width="match_parent"
        android:layout_height="55dp"/>

    <TextView
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:id="@+id/already"
        android:layout_alignParentBottom="true"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_medium"
        android:textSize="13sp"
        android:text="@string/already_have_an_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView

        android:layout_marginBottom="10dp"
        android:textStyle="bold"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@id/already"
        android:layout_alignParentBottom="true"
        android:textColor="@color/text_red"
        android:textSize="13sp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>