<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="500dp">


    <ImageView
        android:id="@+id/header_img"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_launcher_round" />



    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/genre"
        android:text=""
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/genre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottom_tool_kit"
        android:layout_margin="20dp"
        android:text=""
        android:textAlignment="center"
        android:textSize="16sp" />


    <LinearLayout
        android:id="@+id/bottom_tool_kit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/mylist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_check_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_list"
                android:textColor="@color/white" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/play"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/ic_baseline_play_arrow_24"
            android:text="@string/play"
            android:textColor="@color/black" />

        <LinearLayout
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_outline_info_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>