<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"


    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.HomeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6.5">

        <ImageView
            android:id="@+id/header_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher_round" />

        <LinearLayout
            android:id="@+id/top_search_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="15dp"
            android:elevation="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/icon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_weight="1"
                android:src="@drawable/group" />

            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/search_editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/icon"
                android:layout_weight="8"
                android:background="@drawable/search_edittext_bg"
                android:drawableStart="@drawable/ic_baseline_search_24"
                android:drawablePadding="15dp"
                android:hint="@string/search"
                android:padding="10dp"
                android:singleLine="true" />

            <ImageView
                android:id="@+id/user"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/search_editText"
                android:layout_weight="1"
                android:src="@drawable/single_user" />
        </LinearLayout>


        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/genre"
            android:text=""
            android:textAlignment="center"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/bottom_tool_kit"
            android:layout_margin="20dp"
            android:text=""
            android:textAlignment="center"
            android:textSize="16sp" />


        <LinearLayout
            android:id="@+id/bottom_tool_kit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/mylist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_check_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_list"
                    android:textColor="@color/white" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/play"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:backgroundTint="@color/white"
                android:drawableStart="@drawable/ic_baseline_play_arrow_24"
                android:text="@string/play"
                android:textColor="@color/black" />

            <LinearLayout
                android:id="@+id/info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_outline_info_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info"
                    android:textColor="@color/white" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/outer_rc"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3.5"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/outer_rc_item_view" />
</LinearLayout>